--- a/index.html
+++ b/index.html
@@ -1,1 +1,253 @@
-Hello World
+<!DOCTYPE html>
+  <html>
+      <head>
+	<meta charset="utf-8">
+
+	  <meta name ="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
+	 	  <link rel="stylesheet" type="text/css" href="styles.css">
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+		  crossorigin="anonymous">
+
+		 <script src="https://use.fontawesome.com/73276a1672.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Passion+One|Prociono" rel="stylesheet">
+  </head>
+
+
+	<body>
+
+
+<div class="open ">
+  <span class="cls "></span>
+  <span>
+    <ul class="sub-menu ">
+      <li class="active"> <a href="#section1">Home</a> </li>
+      <li> <a href="#section2 ">About</a> </li>
+      <li> <a href="#section3 ">Projects</a> </li>
+      <li> <a href="#section4 ">Contact</a> </li>
+
+    </ul>
+  </span>
+  <span class="cls "></span>
+</div>
+
+
+
+
+
+	  <div id="section1" class="jumbotron" href="#">
+	  <div class="main">
+		  <div>
+	  <h2>Hi I'm Sloane!</h2>
+	  <h2>An aspiring web developer from New York</h2>
+	  <p>With a strong passion for learning!</p>
+	  					<div class="socicons" style = "text-align: center;">
+				<a href="facebook.com">
+					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
+
+					<a href="https://twitter.com/oldmansloane ">
+							  <i class="fa fa-twitter fa-3x " aria-hidden="true "></i></a>
+							  <a href="https://www.pinterest.com">
+							  <i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
+							  <a href="https://github.com/sloane1965">
+							  <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
+							  <a href="https://www.linkedin.com">
+					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
+          <div>
+					</div>
+	   </div>
+
+
+	  <div id="section2" class="container" href="#">
+                    <div class = "about">
+
+				<p>Born in raised in Albany New York I am a 25 year old computer geek.
+				Although I was introduced too coding at a young age, I got easily frustrated
+				and unfortunately mostly ignored
+				it until a couple of years ago. But once I gave it another shot I realized it
+				is an amazing way to combine
+				my passion, art, technology and learning.  I now obsessivly practice, towards
+				full stack development using online sources such as FreeCodeCamp
+				Code Academy, and a stack of "For Dummies" books, and learn and improve
+				on a daily basis, most recently getting into the world of React, and Node.js</p>
+      </div></div>
+
+
+
+
+
+<div class = "jumbotron">
+<div class = "container">
+ <div class = "projects" id = "section3">
+
+                <h1>Hello I am here</h1>
+
+ </div>
+                 </div>
+       </div>
+
+
+
+
+
+
+    <div class = "container" id = "section4">
+
+
+<form class="form-horizontal" role="form" method="post" action="index.php">
+	<div class="form-group">
+		<label for="name" class="col-sm-2 control-label">Name</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name" value="<?php echo htmlspecialchars($_POST['name']); ?>">
+
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="email" class="col-sm-2 control-label">Email</label>
+		<div class="col-sm-10">
+			<input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="<?php echo htmlspecialchars($_POST['email']); ?>">
+
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="message" class="col-sm-2 control-label">Message</label>
+		<div class="col-sm-10">
+			<textarea class="form-control" rows="4" name="message"><?php echo htmlspecialchars($_POST['message']);?></textarea>
+
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="human" name="human" placeholder="Your Answer">
+
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-10 col-sm-offset-2">
+			<input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-10 col-sm-offset-2">
+
+		</div>
+	</div>
+</form>
+
+       </div>
+  </body>
+<script>
+<?php
+	if (isset($_POST["submit"])) {
+		$name = $_POST['name'];
+		$email = $_POST['email'];
+		$message = $_POST['message'];
+		$human = intval($_POST['human']);
+		$from = 'Demo Contact Form';
+		$to = 'example@bootstrapbay.com';
+		$subject = 'Message from Contact Demo ';
+
+		$body = "From: $name\n E-Mail: $email\n Message:\n $message";
+
+		// Check if name has been entered
+		if (!$_POST['name']) {
+			$errName = 'Please enter your name';
+		}
+
+		// Check if email has been entered and is valid
+		if (!$_POST['email'] || !filter_var($_POST['email'], FILTER_VALIDATE_EMAIL)) {
+			$errEmail = 'Please enter a valid email address';
+		}
+
+		//Check if message has been entered
+		if (!$_POST['message']) {
+			$errMessage = 'Please enter your message';
+		}
+		//Check if simple anti-bot test is correct
+		if ($human !== 5) {
+			$errHuman = 'Your anti-spam is incorrect';
+		}
+
+// If there are no errors, send the email
+if (!$errName && !$errEmail && !$errMessage && !$errHuman) {
+	if (mail ($to, $subject, $body, $from)) {
+		$result='<div class="alert alert-success">Thank You! I will be in touch</div>';
+	} else {
+		$result='<div class="alert alert-danger">Sorry there was an error sending your message. Please try again later</div>';
+	}
+}
+	}
+?>
+     </script>
+  <script>
+$(document).ready(function() {
+  $(document).delegate('.open', 'click', function(event){
+    $(this).addClass('oppenned');
+    event.stopPropagation();
+  })
+  $(document).delegate('body', 'click', function(event) {
+    $('.open').removeClass('oppenned');
+  })
+  $(document).delegate('.cls', 'click', function(event){
+    $('.open').removeClass('oppenned');
+    event.stopPropagation();
+  });
+});
+</script>
+
+
+<script>
+$(window).scroll(function() {
+  if ($(document).scrollTop() > 50) {
+    $('nav').addClass('shrink');
+  } else {
+    $('nav').removeClass('shrink');
+  }
+});
+</script>
+
+
+<script type="text/javascript">
+ jQuery(function($){
+     $( '.menu-btn' ).click(function(){
+     $('.responsive-menu').addClass('expand')
+     $('.menu-btn').addClass('btn-none')
+     })
+
+     $( '.close-btn' ).click(function(){
+     $('.responsive-menu').removeClass('expand')
+     $('.menu-btn').removeClass('btn-none')
+     })
+   })
+ </script>
+  <script>
+$(function() {
+  $('a[href*="#"]:not([href="#"])').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+      var target = $(this.hash);
+      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+      if (target.length) {
+        $('html, body').animate({
+          scrollTop: target.offset().top
+        }, 800);
+        return false;
+      }
+    }
+  });
+});
+
+  </script>
+  <script>        $('#nav').scroll(function () {
+            if (isNavBarShown) { return; }
+            $('.navbar').fadeIn();
+        });
+  </script>
+
+
+
+
+  </html>
