--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	  <meta name ="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
+<script type="text/javascript" src="jquery-3.0.0.min.js"></script>
 	 	  <link rel="stylesheet" type="text/css" href="styles.css">
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
