--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,9 @@
-<form method="post" id="captcha_form" name="captcha_form" action="mailform.php"><fieldset><ol>
-<li id="ht"><label class="solo" for="htest">Leave this input blank</label><span class="required">(required)</span><input type="text" class="soloinput" name="htest" id="htest" value="" />
+<div class="container col-md-8" style="text-align:center">
 
-	</li><li><label class="solo" for="email">Email address:</label><span class="required">(required)</span><input type="text" class="soloinput" name="email" id="email" value="" />
+<form method="post" id="captcha_form" name="captcha_form" action="mailform.php"><fieldset><ol>
+
+
+	<li><label class="solo" for="email">Email address:</label><span class="required">(required)</span><input type="text" class="soloinput" name="email" id="email" value="" />
 
 	</li><li><label class="solo" for="name">Name:</label><span class="required">(required)</span><input type="text" class="soloinput" name="name" id="name" value="" />
 
@@ -31,9 +33,11 @@ Enter the text contained in the image into the text box:
 </div>
 	</li><li><label class="solo" for="message">Message:</label><span class="required">(required)</span>
 <div class="soloinput"><textarea class="soloinput" name="message" id="message" ></textarea>
-						<br /><a class="soloinput" href="http://www.addressmunger.com/contact_form_generator/" style="">Contact form generator</a>
+						<br />
 
 
 	<p><input name="submit" id="submit" type="submit" value="Send" style="float: right;" /></p></div>
 	</li></ol>
 </fieldset></form> &nbsp;<br />&nbsp;<br />&nbsp;
+	
+</div>
