--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
     </ul>
   </span>
   <span class="cls "></span>
+	  <div class="navbar-collapse collapse">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+    <div class="navbar-header navbar-right">
+  		<p class="navbar-text">
+  		<a href="#" class="navbar-link">Username</a>
+  		</p>
+  	</div>
+  </div>
 </div>
 
 
