--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <li class="active"> <a href="#section1">Home</a> </li>
       <li> <a href="#section2 ">About</a> </li>
       <li> <a href="#section3 ">Projects</a> </li>
-      <li> <a href="contact.html ">Contact</a> </li>
+      <li> <a href="contact.htm ">Contact</a> </li>
 
     </ul>
   </span>
