--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<body>
 
-
+<nav>
 <div class="open ">
   <span class="cls "></span>
   <span>
@@ -42,6 +42,7 @@
   		<p class="navbar-text">
   		<a href="#" class="navbar-link">Username</a>
   		</p>
+	    </nav>
   	</div>
   </div>
 </div>
