--- a/contact.htm
+++ b/contact.htm
@@ -9,7 +9,7 @@ $message="Please provide a correct email address";} else {
   $telephone = strip_tags($_POST['telephone']);
   $email = $_POST['email'];
   $comments = strip_tags($_POST['comments']);
-  $to = 'trenholme90@hotmail.com';
+  $to = 'oldmansloane@gmail.com';
   $subject = 'Contact form submitted.';
   $body = $name. "\n" .$comments;
   $headers = 'From: ' .$email;
