--- a/contact.htm
+++ b/contact.htm
@@ -1,17 +1,36 @@
 <!doctype html>
 <html>
-
+<?php
+if ($_POST){
+if (!filter_input(INPUT_POST, 'email', FILTER_VALIDATE_EMAIL)){
+$message="Please provide a correct email address";} else {
+  $name = strip_tags($_POST['name']);
+  $company_name = strip_tags($_POST['company_name']);
+  $telephone = strip_tags($_POST['telephone']);
+  $email = $_POST['email'];
+  $comments = strip_tags($_POST['comments']);
+  $to = 'oldmansloane@gmail.com';
+  $subject = 'Contact form submitted.';
+  $body = $name. "\n" .$comments;
+  $headers = 'From: ' .$email;
+  if (mail($to, $subject, $body, $headers)) {
+  echo 'Thanks for contacting us. We'll be in touch soon!';
+  } else {
+  $message = 'Sorry an error occurred. Please try again later.';
+  }
+  }}
+?>
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
 <body>
-<?php echo "<p style='color:red'>$message</p>"; ?>
+<?php echo "<p style='color:red'></p>" ?>
 <div class="contact_form">
     <form id="contactform" action="contact.php" method="post">
 <p>Name:<br/><input name="name" type="text" required /></p>
-<p>Company Name: <br/><input name="company_name" type="text" required/></p>
-<p>Telephone: <br/><input name="telephone" type="tel" required/></p>
+<p>Company Name: <br/><input name="company_name" type="text"/></p>
+<p>Telephone: <br/><input name="telephone" type="tel"/></p>
 <p>Email: <br/><input name="email" type="email" required/></p>
 <p>Comments: <br/><textarea name="comments" required/>   </textarea></p>
     <input type="submit" name="submit" value="Send!"/>
