--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,24 @@
-<!doctype html>
-<html>
-<?php
-if ($_POST){
-if (!filter_input(INPUT_POST, 'email', FILTER_VALIDATE_EMAIL)){
-$message="Please provide a correct email address";} else {
-  $name = strip_tags($_POST['name']);
-  $company_name = strip_tags($_POST['company_name']);
-  $telephone = strip_tags($_POST['telephone']);
-  $email = $_POST['email'];
-  $comments = strip_tags($_POST['comments']);
-  $to = 'oldmansloane@gmail.com';
-  $subject = 'Contact form submitted.';
-  $body = $name. "\n" .$comments;
-  $headers = 'From: ' .$email;
-  if (mail($to, $subject, $body, $headers)) {
-  echo 'Thanks for contacting us. We'll be in touch soon!';
-  } else {
-  $message = 'Sorry an error occurred. Please try again later.';
-  }
-  }}
-?>
-<head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-</head>
-<body>
-<?php echo "<p style='color:red'></p>" ?>
-<div class="contact_form">
-    <form id="contactform" action="contact.php" method="post">
-<p>Name:<br/><input name="name" type="text" required /></p>
-<p>Company Name: <br/><input name="company_name" type="text"/></p>
-<p>Telephone: <br/><input name="telephone" type="tel"/></p>
-<p>Email: <br/><input name="email" type="email" required/></p>
-<p>Comments: <br/><textarea name="comments" required/>   </textarea></p>
-    <input type="submit" name="submit" value="Send!"/>
- 
-</form>
+<form action="contact.php" class="footer-form" method="post">
+<p class="title">How can we be of service?</p>
+
+<div class="form-group">
+    <strong>
+        <input type="text" class="form-control" name="contact-name" id="contact-name" placeholder="Name:">
+    </strong>
 </div>
-</body>
-</html>
+<div class="form-group">
+    <strong>
+        <input type="email" class="form-control" name="contact-email" id="contact-email" placeholder="E-mail:">
+    </strong>
+</div>
+<div class="form-group">
+    <strong>
+        <input type="phone" class="form-control" name="contact-phone" id="contact-phone" placeholder="Phone:">
+    </strong>
+</div>
+<div class="form-group">
+    <strong> 
+        <input type="text" class="form-control" name="child_info" id="child_info" placeholder="Tell us about your child:">
+    </strong>
+</div>
+<button type="submit" class="btn btn-default waves-effect waves-button waves-float waves-classic"><strong>Submit</strong></button>
