--- a/index.html
+++ b/index.html
@@ -32,21 +32,8 @@
     </ul>
   </span>
   <span class="cls "></span>
-	<nav>
-	  <div class="navbar-collapse collapse">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-    <div class="navbar-header navbar-right">
-  		<p class="navbar-text">
-  		<a href="#" class="navbar-link">Username</a>
-	    </p>
-  	</div>
-  </div>
-</div>
-	</nav>
+
+
 
 
 
@@ -92,7 +79,7 @@
 
 
 
-<div class="container">
+<div class="container projects">
 <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
@@ -196,7 +183,6 @@ $(function() {
             $('.navbar').fadeIn();
         });
   </script>
-
 
 
 
