--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,8 @@
+<html>
+<body>
+
+<?php require 'contact.php'; ?>
+
 <form action="contact.php" class="footer-form" method="post">
 <p class="title">How can we be of service?</p>
 
@@ -22,3 +27,5 @@
     </strong>
 </div>
 <button type="submit" class="btn btn-default waves-effect waves-button waves-float waves-classic"><strong>Submit</strong></button>
+    </body>
+    </html>
