--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,11 @@
-<html>
-<body>
-
-<?php require 'contact.php'; ?>
-
-<form action="contact.php" class="footer-form" method="post">
-<p class="title">How can we be of service?</p>
-
-<div class="form-group">
-    <strong>
-        <input type="text" class="form-control" name="contact-name" id="contact-name" placeholder="Name:">
-    </strong>
-</div>
-<div class="form-group">
-    <strong>
-        <input type="email" class="form-control" name="contact-email" id="contact-email" placeholder="E-mail:">
-    </strong>
-</div>
-<div class="form-group">
-    <strong>
-        <input type="phone" class="form-control" name="contact-phone" id="contact-phone" placeholder="Phone:">
-    </strong>
-</div>
-<div class="form-group">
-    <strong> 
-        <input type="text" class="form-control" name="child_info" id="child_info" placeholder="Tell us about your child:">
-    </strong>
-</div>
-<button type="submit" class="btn btn-default waves-effect waves-button waves-float waves-classic"><strong>Submit</strong></button>
-    </body>
-    </html>
+<!-- Do not change the code! -->
+<a id="foxyform_embed_link_841889" href="http://www.foxyform.com/">foxyform</a>
+<script type="text/javascript">
+(function(d, t){
+   var g = d.createElement(t),
+       s = d.getElementsByTagName(t)[0];
+   g.src = "http://www.foxyform.com/js.php?id=841889&sec_hash=aa5aef27154&width=350px";
+   s.parentNode.insertBefore(g, s);
+}(document, "script"));
+</script>
+<!-- Do not change the code! -->
