--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
 
-<div class="container projects">
+<div class="container" href="#" id="section3">
 <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
@@ -114,6 +114,7 @@
 	</div>
 	</div>
 </div>
+		<div class="container>	  
 <!-- Do not change the code! -->
 <a id="foxyform_embed_link_841889" href="http://www.foxyform.com/">foxyform</a>
 <script type="text/javascript">
@@ -125,7 +126,7 @@
 }(document, "script"));
 </script>
 <!-- Do not change the code! -->
-
+		    </div>
 
 
 
