--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,6 @@
-<!-- Do not change the code! -->
-<a id="foxyform_embed_link_841889" href="http://www.foxyform.com/">foxyform</a>
-<script type="text/javascript">
-(function(d, t){
-   var g = d.createElement(t),
-       s = d.getElementsByTagName(t)[0];
-   g.src = "http://www.foxyform.com/js.php?id=841889&sec_hash=aa5aef27154&width=350px";
-   s.parentNode.insertBefore(g, s);
-}(document, "script"));
-</script>
-<!-- Do not change the code! -->
+<form action="https://formspree.io/oldmansloane@gmail.com"
+      method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
+</form>
