--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <h3>Fill out the form below to learn more!</h3>
   </div>
   <div class="row body">
-    <form action="https://formspree.io/oldmansloane@gmail.com">
+    <form action="https://formspree.io/oldmansloane@gmail.com" method="post">
       <ul>
         
         <li>
