--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,17 @@
+<!DOCTYPE HTML>
+<html>
+  
+  <head>
+<link rel="stylesheet" type="text/css" href="styles.css">
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+		  crossorigin="anonymous">
 
-<div class="container">
+		 <script src="https://use.fontawesome.com/73276a1672.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Passion+One|Prociono" rel="stylesheet">
+  </head>
+  <body>
+<div class="container contact">
   <div class="row header">
     <h1>CONTACT US &nbsp;</h1>
     <h3>Fill out the form below to learn more!</h3>
@@ -40,3 +52,5 @@
     </form>  
   </div>
 </div>
+  </body>
+</html>
