--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,24 @@
 <link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Passion+One|Prociono" rel="stylesheet">
   </head>
   <body>
+	  <div class="open ">
+  <span class="cls "></span>
+  <span>
+    <ul class="sub-menu ">
+      <li class="active"> <a href="#section1">Home</a> </li>
+      <li> <a href="#section2 ">About</a> </li>
+      <li> <a href="#section3 ">Projects</a> </li>
+      <li> <a href="contact.html ">Contact</a> </li>
+
+    </ul>
+  </span>
+  <span class="cls "></span>
+
+		</div>
 <div class="container contact">
   <div class="row header">
-    <h1>CONTACT US &nbsp;</h1>
-    <h3>Fill out the form below to learn more!</h3>
+    <h1>Contact me! &nbsp;</h1>
+    <h3>If you have any questions please feel free to contact me!</h3>
   </div>
   <div class="row body">
     <form action="https://formspree.io/oldmansloane@gmail.com" method="post">
