--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
         
         <li>
           <p>
-            <label for="email">email <span class="req">*</span></label>
+		  <label for="email"><h3>email</h3> <span class="req">*</span></label>
             <input type="email" name="email" placeholder="youremail@email.com" />
           </p>
         </li>        
         <li><div class="divider"></div></li>
         <li>
-          <label for="comments">comments</label>
+		<label for="comments"><h3>Message</h3></label>
           <textarea cols="46" rows="3" name="comments"></textarea>
         </li>
         
