--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         
         <li>
           <p>
-		  <label for="email"><h3>email</h3> <span class="req">*</span></label>
+		  <label for="email">email<span class="req">*</span></label>
             <input type="email" name="email" placeholder="youremail@email.com" />
           </p>
         </li>        
