--- a/contact.html
+++ b/contact.html
@@ -83,4 +83,10 @@
      })
    })
  </script>
+	  <script>        $('#nav').scroll(function () {
+            if (isNavBarShown) { return; }
+            $('.navbar').fadeIn();
+        });
+  </script>
+
 </html>
