--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
   <span class="cls "></span>
 
 		</div>
-<div class="container contact">
+<div class="contact">
   <div class="row header">
     <h1>Contact me! &nbsp;</h1>
     <h3>If you have any questions please feel free to contact me!</h3>
