--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
-      <a href="/w3images/lights.jpg">
-        <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+      <a href="https://salty-citadel-23140.herokuapp.com/">
+        <img src="screencapture-salty-citadel-23140-herokuapp-1483556319013.png" alt="Lights" style="width:100%">
         <div class="caption">
-          <p>Lorem ipsum...</p>
+          <p>Youtube Clone using React.</p>
         </div>
       </a>
     </div>
