--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,19 @@
   <span class="cls "></span>
 
 		</div>
+	  <div class="socicons" style = "text-align: center;">
+				<a href="facebook.com">
+					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
+
+					<a href="https://twitter.com/oldmansloane ">
+							  <i class="fa fa-twitter fa-3x " aria-hidden="true "></i></a>
+							  <a href="https://www.pinterest.com">
+							  <i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
+							  <a href="https://github.com/sloane1965">
+							  <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
+							  <a href="https://www.linkedin.com">
+					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
+          <div>
 	  <div class="contact">
 <div class="container">
   <div class="row header">
