--- a/contact.html
+++ b/contact.html
@@ -21,25 +21,13 @@
   <span class="cls "></span>
   <span>
     <ul class="sub-menu ">
-      <li class="active"> <a href="#section1">Home</a> </li>
+      <li class="active"> <a href="https://sloane1965.github.io">Home</a> </li>
     </ul>
   </span>
   <span class="cls "></span>
 
 		</div>
-	  <div class="socicons" style = "text-align: center;">
-				<a href="facebook.com">
-					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
 
-					<a href="https://twitter.com/oldmansloane ">
-							  <i class="fa fa-twitter fa-3x " aria-hidden="true "></i></a>
-							  <a href="https://www.pinterest.com">
-							  <i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
-							  <a href="https://github.com/sloane1965">
-							  <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
-							  <a href="https://www.linkedin.com">
-					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
-          <div>
 	  <div class="contact">
 <div class="container">
   <div class="row header">
@@ -84,6 +72,19 @@
   </div>
 </div>
 	  </div>
+	  	  <div class="socicons" style = "text-align: center;">
+				<a href="facebook.com">
+					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
+
+					<a href="https://twitter.com/oldmansloane ">
+							  <i class="fa fa-twitter fa-3x " aria-hidden="true "></i></a>
+							  <a href="https://www.pinterest.com">
+							  <i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
+							  <a href="https://github.com/sloane1965">
+							  <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
+							  <a href="https://www.linkedin.com">
+					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
+          <div>
   </body>
  <script>
 $(document).ready(function() {
