--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,7 @@
   </div>
 </div>
 	  </div>
+	  
 	  	  <div class="socicons" style = "text-align: center;">
 				<a href="facebook.com">
 					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
@@ -84,7 +85,7 @@
 							  <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
 							  <a href="https://www.linkedin.com">
 					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
-          <div>
+          </div>
   </body>
  <script>
 $(document).ready(function() {
