--- a/contact.html
+++ b/contact.html
@@ -27,19 +27,19 @@
   <span class="cls "></span>
 
 		</div>
-	  	  	  <div class="socicons" style = "text-align: center;">
-				<a href="facebook.com">
+	<div class="socicons" style = "text-align: center;">
+				<a href="https://www.facebook.com/oldmansloane">
 					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
 
 					<a href="https://twitter.com/oldmansloane ">
 							  <i class="fa fa-twitter fa-3x " aria-hidden="true "></i></a>
-							  <a href="https://www.pinterest.com">
+							  <a href="http://codepen.io/sloane7568/">
 							  <i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
 							  <a href="https://github.com/sloane1965">
 							  <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
-							  <a href="https://www.linkedin.com">
+							  <a href="https://www.linkedin.com/in/michael-sloane-9019a1100">
 					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
-          </div>
+          <div>
 
 	  <div class="contact">
 <div class="container">
