--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
   <div class="row header">
 
     <h1>Contact me! &nbsp;</h1>
-    <h3>If you have any questions please feel free to contact me!</h3>
+    <h3>If you have any questions!</h3>
   </div>
   <div class="row body">
     <form action="https://formspree.io/oldmansloane@gmail.com" method="post">
-      <ul>
+      <ul style="list-style-type: none">
         
         <li>
           <p class="left">
