--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Passion+One|Prociono" rel="stylesheet">
   </head>
   <body>
-	  <div class="open ">
+	  <div class="open " style="padding bottom:15px">
   <span class="cls "></span>
   <span>
     <ul class="sub-menu ">
