--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     <form action="https://formspree.io/oldmansloane@gmail.com" method="post">
       <ul style="list-style-type: none">
 
-        <li>
+        <li class="col-md-8">
           <p class="left">
             <label for="first_name">first name</label>
             <input type="text" name="first_name" placeholder="John" />
