--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
         </li>
         <li>
           <p>
-		  <label for="email">email</label>
+		  <label for="email">email<span class="req">*</span></label>
             <input type="email" name="email" placeholder="youremail@email.com" />
           </p>
         </li>        
