--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
           </p>
         </li>
         <li>
-          <p>
-		  <label for="email"><span class="req">Email*</span></label>
+          <p class="pull-right">
+		<label for="email"><span class="req">Email*</span></label>
             <input type="email" name="email" placeholder="youremail@email.com" />
           </p>
         </li>        
