--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
   </div>
   <div class="col-md-4">
     <div class="thumbnail">
-      <a href="/w3images/nature.jpg">
-        <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+      <a href="http://codepen.io/sloane7568/pen/amkPNb">
+        <img src="screencapture-codepen-io-sloane7568-full-amkPNb-1483814007533.png" alt="Nature" style="width:100%">
         <div class="caption">
-          <p>Lorem ipsum...</p>
+          <p>A random quote generator.</p>
         </div>
       </a>
     </div>
