--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 
-
+<div class= "jumbotron">
 <div class="container" href="#" id="section3">
 <div class="row">
   <div class="col-md-4">
@@ -114,8 +114,9 @@
     </div>
 	</div>
 	</div>
-</div>
-			  </body>
+	</div></div></div>
+			
+  </body>
   <script>
 $(document).ready(function() {
   $(document).delegate('.open', 'click', function(event){
