--- a/contact.html
+++ b/contact.html
@@ -63,14 +63,14 @@
           </p>
         </li>
         <li>
-          <p class="pull-right">
+          <p>
 		<label for="email"><span class="req">Email*</span></label>
             <input type="email" name="email" placeholder="youremail@email.com" />
           </p>
         </li>        
-        <li><div class="divider"></div></li>
+ 
         <li>
-		<label for="comments"><h3>Message</h3></label>
+		<label for="comments">Message</label>
           <textarea cols="46" rows="3" name="comments"></textarea>
         </li>
         
