--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
             <input type="text" name="last_name" placeholder="Smith" />      
           </p>
         </li>
-        <li>
-          <p>
+        <li class="col-md-8">
+          <p class="left">
 		<label for="email"><span class="req">Email*</span></label>
             <input type="email" name="email" placeholder="youremail@email.com" />
           </p>
