--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
   
   <head>
 	  <meta charset="utf-8">
-
-	  <meta name ="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+	  <meta name="viewport" content="width=960px, maximum-scale=1.0" />
+	  <meta name ="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes"/>
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 <script type="text/javascript" src="jquery-3.0.0.min.js"></script>
