--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 		 <script src="https://use.fontawesome.com/73276a1672.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Passion+One|Prociono" rel="stylesheet">
   </head>
-  <body>
+  <header>
 	  <div class="open " style="padding-bottom:15px">
   <span class="cls "></span>
   <span>
@@ -40,7 +40,8 @@
 							  <a href="https://www.linkedin.com/in/michael-sloane-9019a1100">
 					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
           </div>
-
+	</header>
+<body>
 	  <div class="contact">
 <div class="container">
   <div class="row header">
