--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 							  <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
 							  <a href="https://www.linkedin.com/in/michael-sloane-9019a1100">
 					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
-          <div>
+          </div>
 					</div>
 	   </div>
 
 
 	  <div id="section2" class="container" href="#">
                     <div class = "about">
-
+			<img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTDQOomBZxdZHdQvxeFJX0yqH5qCe-pYmKBIMqxMRiSc6qy4ICJSv05RuY"/>
 				<p>Born in raised in Albany New York I am a 25 year old computer geek.
 				Although I was introduced too coding at a young age, I got easily frustrated
 				and unfortunately mostly ignored
