--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
 
 	  <div id="section1" class="jumbotron" href="#">
 	  <div class="main">
-		  <div>
 	  <h2>Hi I'm Sloane!</h2>
 	  <h2>An aspiring web developer from New York</h2>
 	  <p>With a strong passion for learning!</p>
+		  </div>
+		</div>
 	  					<div class="socicons" style = "text-align: center;">
 				<a href="https://www.facebook.com/oldmansloane">
 					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
@@ -59,8 +60,7 @@
 							  <a href="https://www.linkedin.com/in/michael-sloane-9019a1100">
 					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
           </div>
-					</div>
-	   </div>
+
 
 
 	  <div id="section2" class="container" href="#">
@@ -79,8 +79,7 @@
 
 
 
-<div class= "jumbotron">
-<div class="container" href="#" id="section3">
+<div class= "jumbotron" id="#section3">
 <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
@@ -114,7 +113,7 @@
     </div>
 	</div>
 	</div>
-	</div></div></div>
+	</div>
 			
   </body>
   <script>
