--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 	  <div id="section2" class="container" href="#">
                     <div class = "about">
-			<img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTDQOomBZxdZHdQvxeFJX0yqH5qCe-pYmKBIMqxMRiSc6qy4ICJSv05RuY"/>
+			
 				<p>Born in raised in Albany New York I am a 25 year old computer geek.
 				Although I was introduced too coding at a young age, I got easily frustrated
 				and unfortunately mostly ignored
@@ -79,7 +79,7 @@
 
 
 
-<div class= "jumbotron" id="#section3">
+<div class= "jumbotron" id="section3">
 <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
