--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
 
-	<body>
+
 
 
 <div class="open ">
@@ -38,7 +38,7 @@
 
 
 
-
+<body>
 
 	  <div id="section1" class="jumbotron" href="#">
 	  <div class="main">
@@ -47,7 +47,9 @@
 	  <p>With a strong passion for learning!</p>
 		  </div>
 		</div>
-	  					<div class="socicons" style = "text-align: center;">
+	  					
+		
+		<div class="socicons" style = "text-align: center;">
 				<a href="https://www.facebook.com/oldmansloane">
 					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
 
@@ -60,10 +62,11 @@
 							  <a href="https://www.linkedin.com/in/michael-sloane-9019a1100">
 					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
           </div>
+	</div>
 
 
 
-	  <div id="section2" class="container" href="#">
+	  <div id="section2" class="container">
                     <div class = "about">
 			
 				<p>Born in raised in Albany New York I am a 25 year old computer geek.
