--- a/index.html
+++ b/index.html
@@ -33,52 +33,97 @@
   </span>
   <span class="cls "></span>
 
-		</div>
+</div>
 
+<div id="section1" class="socicons" style = "text-align: center;">
+      <a href="https://www.facebook.com/oldmansloane">
+        <i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
 
-
-
+        <a href="https://twitter.com/oldmansloane ">
+              <i class="fa fa-twitter fa-3x " aria-hidden="true "></i></a>
+              <a href="http://codepen.io/sloane7568/">
+              <i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
+              <a href="https://github.com/sloane1965">
+              <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
+              <a href="https://www.linkedin.com/in/michael-sloane-9019a1100">
+        <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
+        </div>
 <body>
 
-	  <div id="section1" class="jumbotron" href="#">
+
+
+
+	  <div class="jumbotron" href="#">
 	  <div class="main">
+
 	  <h2>Hi I'm Sloane!</h2>
 	  <h2>An aspiring web developer from New York</h2>
 	  <p>With a strong passion for learning!</p>
+
+    <a href="contact.html">
+    <i class="fa fa-paper-plane fa-4x" aria-hidden="true";> Contact me here!</i></a>
+
 		  </div>
-		</div>
-	  					
-		
-		<div class="socicons" style = "text-align: center;">
-				<a href="https://www.facebook.com/oldmansloane">
-					<i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
 
-					<a href="https://twitter.com/oldmansloane ">
-							  <i class="fa fa-twitter fa-3x " aria-hidden="true "></i></a>
-							  <a href="http://codepen.io/sloane7568/">
-							  <i class="fa fa-codepen fa-3x" aria-hidden="true"></i></a>
-							  <a href="https://github.com/sloane1965">
-							  <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
-							  <a href="https://www.linkedin.com/in/michael-sloane-9019a1100">
-					<i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> </a>
-          </div>
-	</div>
+</div>
 
 
 
-	  <div id="section2" class="container">
+	  <div id="section2">
                     <div class = "about">
-			
-				<p>Born in raised in Albany New York I am a 25 year old computer geek.
-				Although I was introduced too coding at a young age, I got easily frustrated
-				and unfortunately mostly ignored
-				it until a couple of years ago. But once I gave it another shot I realized it
-				is an amazing way to combine
-				my passion, art, technology and learning.  I now obsessivly practice, towards
-				full stack development using online sources such as FreeCodeCamp
-				Code Academy, and a stack of "For Dummies" books, and learn and improve
-				on a daily basis, most recently getting into the world of React, and Node.js</p>
-      </div></div>
+                      <div class="wrap col-lg-6">
+                        <h1>Skills</h1>
+                        <div class="bar cf" data-percent="80%">
+                          <span class="label">Bootstrap</span>
+                        </div>
+                        <div class="bar cf" data-percent="70%">
+                          <span class="label">Photoshop</span>
+                        </div>
+                      <div class="holder"><div class="bar cf" data-percent="100%">
+                        <span class="label">HTML5</span></div>
+                        <div class="bar cf" data-percent="90%">
+                          <span class="label light">CSS3</span></div>
+                          <div class="bar cf" data-percent="65%">
+                            <span class="label">Jquery</span></div>
+                            <div class="bar cf" data-percent="70%">
+                              <span class="label light">Javascript</span></div>
+                              <div class="bar cf" data-percent="40%">
+                                <span class="label">Mongo</span></div>
+                                <div class="bar cf" data-percent="40%">
+                                  <span class="label light">Node</span></div>
+                                  <div class="bar cf" data-percent="60%">
+                                    <span class="label light">React</span></div>
+                                    <div class="bar cf" data-percent="30%">
+                                      <span class="label">PHP</span></div>
+                                      <div class="bar cf" data-percent="60%">
+                                        <span class="label light">Express</span></div>
+                                        <div class="bar cf" data-percent="80%">
+                                          <span class="label">Front End</span>
+                                        </div>
+                                        <div class="bar cf" data-percent="60%">
+                                          <span class="label">Back End</span>
+                                        </div>
+                                      </div>
+                        </div>
+                        <div class="col-md-6">
+				<h1 style="text-decoration: underline;">Whats up?</h1>
+      <h2 style="font-family:'Lobster', sans-serif; background-color: white; padding: 10px; text-align: center;"> I'm Michael, and ever since I was introduced to coding
+        roughly a year and a half ago, I have worked everyday honing my skills towards becoming a full stack developer.
+        I started out wanting to only learn front end, due to my other passion of art,
+        and using photoshop as one of my mediums definitely gave me a push forward with
+        being comfortable with design elements.
+        But with reading blogs, books, and listening to podcasts, I realized that the back end was
+        equally as amazing,  all in all I love the whole process.
+        On a combination of coffee, countless hours of udemy courses, and online tutorials,
+        I grinded and grinded until I realized that I can actually write websites, and single page
+        web applications, in other words,
+        I finally have the confidence to say I know the basics!  I am looking to finally
+        dive into the world of web development and hope to get the oppurtunity to
+        make my beloved hobby my living!
+      </h2>
+      </div>
+</div>
+
 
 
 
@@ -104,7 +149,7 @@
       </a>
     </div>
   </div>
-	
+
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="/w3images/fjords.jpg">
@@ -117,7 +162,7 @@
 	</div>
 	</div>
 	</div>
-			
+
   </body>
   <script>
 $(document).ready(function() {
@@ -145,7 +190,31 @@ $(window).scroll(function() {
   }
 });
 </script>
+<script>
+setTimeout(function start (){
 
+  $('.bar').each(function(i){
+    var $bar = $(this);
+    $(this).append('<span class="count"></span>')
+    setTimeout(function(){
+      $bar.css('width', $bar.attr('data-percent'));
+    }, i*100);
+  });
+
+$('.count').each(function () {
+    $(this).prop('Counter',0).animate({
+        Counter: $(this).parent('.bar').attr('data-percent')
+    }, {
+        duration: 2000,
+        easing: 'swing',
+        step: function (now) {
+            $(this).text(Math.ceil(now) +'%');
+        }
+    });
+});
+
+}, 500)
+</script>
 
 <script type="text/javascript">
  jQuery(function($){
@@ -153,7 +222,6 @@ $(window).scroll(function() {
      $('.responsive-menu').addClass('expand')
      $('.menu-btn').addClass('btn-none')
      })
-
      $( '.close-btn' ).click(function(){
      $('.responsive-menu').removeClass('expand')
      $('.menu-btn').removeClass('btn-none')
@@ -175,7 +243,6 @@ $(function() {
     }
   });
 });
-
   </script>
   <script>        $('#nav').scroll(function () {
             if (isNavBarShown) { return; }
