--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </div>
                         <div class="col-md-6">
 				<h1 style="text-decoration: underline;">Whats up?</h1>
-      <h2 style="font-family:'Lobster', sans-serif; background-color: white; padding: 10px; text-align: center;"> I'm Michael, and ever since I was introduced to coding
+      <p style="font-size: 1.5em; font-family:'Lobster', sans-serif; background-color: white; padding: 10px; text-align: center;"> I'm Michael, and ever since I was introduced to coding
         roughly a year and a half ago, I have worked everyday honing my skills towards becoming a full stack developer.
         I started out wanting to only learn front end, due to my other passion of art,
         and using photoshop as one of my mediums definitely gave me a push forward with
@@ -120,7 +120,7 @@
         I finally have the confidence to say I know the basics!  I am looking to finally
         dive into the world of web development and hope to get the oppurtunity to
         make my beloved hobby my living!
-      </h2>
+      </p>
       </div>
 </div>
 
