--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
 
 	  <meta name ="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script src="https://code.jquery.com/jquery-3.1.1.js"
+    integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+    crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="jquery-3.0.0.min.js"></script>
 	 	  <link rel="stylesheet" type="text/css" href="styles.css">
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 		  crossorigin="anonymous">
-
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 		 <script src="https://use.fontawesome.com/73276a1672.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Passion+One|Prociono" rel="stylesheet">
+
+<script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
+
+
   </head>
 
 
@@ -56,12 +63,12 @@
 	  <div class="jumbotron" href="#">
 	  <div class="main">
 
-	  <h2>Hi I'm Sloane!</h2>
-	  <h2>An aspiring web developer from New York</h2>
-	  <p>With a strong passion for learning!</p>
+	  <h2  class="animated slideInLeft">Hi I'm Sloane!</h2>
+	  <h2 class="animated slideInRight" id="home2">An aspiring web developer from New York</h2>
+	  <p class="animated slideInLeft" id="home3">With a strong passion for learning!</p>
 
     <a href="contact.html">
-    <i class="fa fa-paper-plane fa-4x" aria-hidden="true";> Contact me here!</i></a>
+    <i id="contactform" class="fa fa-paper-plane fa-4x animated rollIn" aria-hidden="true";> Contact me here!</i></a>
 
 		  </div>
 
@@ -71,8 +78,10 @@
 
 	  <div id="section2">
                     <div class = "about">
+                      <div id="aboutbox" class="animated" >
+
                       <div class="wrap col-lg-6">
-                        <h1>Skills</h1>
+  <h1 style="text-decoration:underline;">Skills</h1>
                         <div class="bar cf" data-percent="80%">
                           <span class="label">Bootstrap</span>
                         </div>
@@ -107,8 +116,11 @@
                         </div>
                         <div class="col-md-6">
 				<h1 style="text-decoration: underline;">Whats up?</h1>
-      <p style="font-size: 1.5em; font-family:'Lobster', sans-serif; background-color: white; padding: 10px; text-align: center;"> I'm Michael, and ever since I was introduced to coding
-        roughly a year and a half ago, I have worked everyday honing my skills towards becoming a full stack developer.
+
+      <p style="font-size: 1.5em; font-family:'Lobster', sans-serif; background-color: white; padding-bottom: 10px; text-align: center;">
+        I'm Michael, and ever since I was introduced to web development
+        about a year and a half ago, I was instantly obsessed, and have
+         worked everyday honing my skills towards becoming a full stack developer.
         I started out wanting to only learn front end, due to my other passion of art,
         and using photoshop as one of my mediums definitely gave me a push forward with
         being comfortable with design elements.
@@ -118,9 +130,10 @@
         I grinded and grinded until I realized that I can actually write websites, and single page
         web applications, in other words,
         I finally have the confidence to say I know the basics!  I am looking to finally
-        dive into the world of web development and hope to get the oppurtunity to
+        dive into the world of web development and hope to get the opportunity to
         make my beloved hobby my living!
-      </p>
+</p>
+</div>
       </div>
 </div>
 
@@ -134,7 +147,7 @@
       <a href="https://salty-citadel-23140.herokuapp.com/">
         <img src="screencapture-salty-citadel-23140-herokuapp-1483556319013.png" alt="Lights" style="width:100%">
         <div class="caption">
-          <p>Youtube Clone using React.</p>
+          <p style="text-decoration:none text-align:center;">Youtube Clone using React.</p>
         </div>
       </a>
     </div>
@@ -142,9 +155,9 @@
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="http://codepen.io/sloane7568/pen/amkPNb">
-        <img src="screencapture-codepen-io-sloane7568-full-amkPNb-1483814007533.png" alt="Nature" style="width:100%">
+        <img  src="screencapture-codepen-io-sloane7568-full-amkPNb-1483814007533.png" alt="Nature" style="width:100%">
         <div class="caption">
-          <p>A random quote generator.</p>
+          <p style="text-decoration:none text-align:center;">A random quote generator.</p>
         </div>
       </a>
     </div>
@@ -155,15 +168,19 @@
       <a href="/w3images/fjords.jpg">
         <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
         <div class="caption">
-          <p>Lorem ipsum...</p>
+          <p style="text-decoration:none text-align:center;">Lorem ipsum...</p>
         </div>
       </a>
+
     </div>
-	</div>
-	</div>
+
 	</div>
 
+	</div>
+	</div>
+<h1> More to come</h1>
   </body>
+
   <script>
 $(document).ready(function() {
   $(document).delegate('.open', 'click', function(event){
@@ -178,6 +195,19 @@ $(document).ready(function() {
     event.stopPropagation();
   });
 });
+</script>
+<script>
+
+    $(document).ready(function(){
+
+      // hide our element on page load
+      $('#aboutbox').css('opacity', 0);
+
+      $('#aboutbox').waypoint(function() {
+          $('#aboutbox').addClass('fadeInLeft');
+      }, { offset: '50%' });
+
+    });
 </script>
 
 
@@ -215,6 +245,7 @@ $('.count').each(function () {
 
 }, 500)
 </script>
+
 
 <script type="text/javascript">
  jQuery(function($){
