--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="https://salty-citadel-23140.herokuapp.com/">
-        <img src="screencapture-salty-citadel-23140-herokuapp-1483556319013.png" alt="Lights" style="width:100%">
+        <img src="screencapture-salty-citadel-23140-herokuapp-1483556319013.png" alt="youtube clone" style="width:100%">
         <div class="caption">
           <p style="text-decoration:none text-align:center;">Youtube Clone using React.</p>
         </div>
@@ -155,7 +155,7 @@
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="http://codepen.io/sloane7568/pen/amkPNb">
-        <img  src="screencapture-codepen-io-sloane7568-full-amkPNb-1483814007533.png" alt="Nature" style="width:100%">
+        <img  src="screencapture-codepen-io-sloane7568-full-amkPNb-1483814007533.png" alt="quote generator" style="width:100%">
         <div class="caption">
           <p style="text-decoration:none text-align:center;">A random quote generator.</p>
         </div>
@@ -165,8 +165,8 @@
 
   <div class="col-md-4">
     <div class="thumbnail">
-      <a href="/w3images/fjords.jpg">
-        <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
+      <a href="https://aqueous-journey-66196.herokuapp.com/">
+        <img src="screencapture-aqueous-journey-66196-herokuapp-1483996263410.png" alt="Blog site" style="width:100%">
         <div class="caption">
           <p style="text-decoration:none text-align:center;">Lorem ipsum...</p>
         </div>
